--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "react": "^16.6.3",
+    "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1"
   },
