--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongodb": "^3.5.3",
+    "mongoose": "^5.9.1",
+    "node": "^13.8.0",
+    "react-calendar": "^2.19.2"
   }
 }
