--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
@@ -15,5 +16,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
