--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "node": "^13.8.0",
+    "passport": "^0.4.1",
     "react-calendar": "^2.19.2"
   }
 }
