--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.6.3",
