--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "node": "^13.8.0",
     "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.0.1",
     "react-calendar": "^2.19.2"
   }
 }
