--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -29,6 +30,7 @@
     "node": "^13.8.0",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.0.1",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2"
   }
 }
