imported react-bootstrap progressbar

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
