--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.18.7",
+    "sass-loader": "^8.0.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
