--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
